<resources>
    <string name="app_name">StudApp</string>
    <!-- TODO: Remove or change this placeholder text -->

    <!-- __ fragment TODO -->
    <string name="etMessageHint">Message</string>
    <string name="btnSend">Send</string>
    <string name="btnSendImg">Send Image</string>

    <!-- Settings fragment -->
    <string name="tvFrequency">Frequency (s)</string>
    <string name="btnSave">Save</string>
    <string name="btnOpenDev">Open dev menu</string>

    <!-- DEV fragment -->
    <string name="btnDevGetReq">Get request</string>
    <string name="btnDevPostReq">Post request</string>
    <string name="response">response</string>
    <string name="devTitle">Dev options</string>
    <string name="DevOkHttpTitle">OkHttp Requests</string>
    <string name="DevSimulatedTitle">Simulate Work</string>
    <string name="DevSimLocation">Location</string>
    <string name="DevSimRange">Decibel range</string>
    <string name="DevSimRangeIndicator">-</string>
    <string name="DevSimRangeMin">min</string>
    <string name="DevSimRangeMax">max</string>
    <string name="DevSimInterval">Interval</string>
    <string name="DevSimIntervalSeconds">seconds</string>
    <string name="DevSimRepeat">Repetitions</string>
    <string name="etDevSimRepeat">Repeat</string>
    <string name="DevSimStart">Start Simulation</string>
    <string name="DevSimStop">Stop Simulation</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="cv_content_description">Message Item</string>
    <string name="ic_message_content_description">Icon</string>
    <string name="tv_category">Category</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet consectetur adipiscing elit Etiam varius</string>
    <string name="efBtnInsert">Insert</string>
    <string name="efBtnSend">Send</string>
    <string name="ac_textview_select_category">Select Category</string>
    <string name="il_hint_category">Category</string>
    <string name="frequencyslider">FrequencySlider</string>
    <string name="tv_noise_recording">Noise Recorder</string>
    <string name="efBtnSave">Save</string>
    <string name="ti_message">Message</string>
    <string name="btn_desc_open_camera">OpenCameraButton</string>

    <string-array name="categories">
        <item>Study</item>
        <item>Restaurant</item>
        <item>Other</item>
    </string-array>
</resources>